--- a/public/hire.html
+++ b/public/hire.html
@@ -49,23 +49,23 @@
                     free
                     to reach
                     out to me using the form below.</p>
-                <div class="row">
-                    <div class="col-md-6 mt-4">
-                        <label for="name">Your Name</label>
-                        <input type="text" class="form-control" placeholder="Adel Alghamdi" name="name">
+                    <div class="row">
+                        <div class="col-md-6 mt-4">
+                            <label for="name">Your Name</label>
+                            <input type="text" class="form-control" placeholder="Adel Alghamdi" name="name" required>
+                        </div>
+                    
+                        <div class="col-md-6 mt-4">
+                            <label for="Email">Email Address</label>
+                            <input type="email" class="form-control" placeholder="a.alg@hotmail.com" name="email" required>
+                        </div>
+                    
+                        <div class="col-md-12 mt-4">
+                            <label for="Message">Your Message</label>
+                            <textarea id="Message" class="form-control" placeholder="Tell me about your project"
+                                name="Message" required></textarea>
+                        </div>
                     </div>
-
-                    <div class="col-md-6 mt-4">
-                        <label for="Email">Email Address</label>
-                        <input type="email" class="form-control" placeholder="a.alg@hotmail.com" name="email">
-                    </div>
-
-                    <div class="col-md-12 mt-4">
-                        <label for="Message">Your Message</label>
-                        <textarea id="Message" class="form-control" placeholder="Tell me about your project"
-                            name="Message"></textarea>
-                    </div>
-                </div>
 
                 <button class="btn btn-primary py-1 my-3 px-3" type="submit">Send Message</button>
             </form>
